--- a/src/index.html
+++ b/src/index.html
@@ -632,7 +632,7 @@
             <div class="program_content lg:pl-11">
                 <div class="grid md:grid-cols-2 grid-cols-1 gap-y-7.5 lg:gap-x-[74px] gap-x-5 lg:pt-15 pt-10">
                     <!-- card start -->
-                    <div class="relative rounded-[10px] bg-white border-2 border-[#F2F2F2] lg:p-10 p-4 transition-all duration-500 hover:shadow-3xl hover:border-transparent group/card wow animate__animated animate__fadeInUp"
+                    <div class="relative rounded-[10px] bg-white border-2 border-[#F2F2F2] lg:p-10 p-4 transition-all duration-500 hover:shadow-2xl hover:border-transparent group/card wow animate__animated animate__fadeInUp"
                         data-wow-delay=".3s">
                         <div
                             class="md:max-w-[88px] max-w-[70px] w-full max-h-[88px] flex justify-center items-center rounded-[10px] border border-[#F2F2F2] bg-white sm:p-[14px] p-2.5 static lg:absolute -left-11 top-1/2 lg:-translate-y-1/2 transition-all duration-500 text-[var(--green-foreground)] group-hover/card:bg-[var(--green)] group-hover/card:text-white">
@@ -660,7 +660,7 @@
                     </div>
                     <!-- card end -->
                     <!-- card start -->
-                    <div class="relative rounded-[10px] bg-white border-2 border-[#F2F2F2] lg:p-10 p-4 transition-all duration-500 hover:shadow-3xl hover:border-transparent group/card wow animate__animated animate__fadeInUp"
+                    <div class="relative rounded-[10px] bg-white border-2 border-[#F2F2F2] lg:p-10 p-4 transition-all duration-500 hover:shadow-2xl hover:border-transparent group/card wow animate__animated animate__fadeInUp"
                         data-wow-delay=".4s">
                         <div
                             class="md:max-w-[88px] max-w-[70px] w-full max-h-[88px] flex justify-center items-center rounded-[10px] border border-[#F2F2F2] bg-white sm:p-[14px] p-2.5 static lg:absolute -left-11 top-1/2 lg:-translate-y-1/2 transition-all duration-500 text-[var(--green-foreground)] group-hover/card:bg-[var(--green)] group-hover/card:text-white">
@@ -688,7 +688,7 @@
                     </div>
                     <!-- card end -->
                     <!-- card start -->
-                    <div class="relative rounded-[10px] bg-white border-2 border-[#F2F2F2] lg:p-10 p-4 transition-all duration-500 hover:shadow-3xl hover:border-transparent group/card wow animate__animated animate__fadeInUp"
+                    <div class="relative rounded-[10px] bg-white border-2 border-[#F2F2F2] lg:p-10 p-4 transition-all duration-500 hover:shadow-2xl hover:border-transparent group/card wow animate__animated animate__fadeInUp"
                         data-wow-delay=".5s">
                         <div
                             class="md:max-w-[88px] max-w-[70px] w-full max-h-[88px] flex justify-center items-center rounded-[10px] border border-[#F2F2F2] bg-white sm:p-[14px] p-2.5 static lg:absolute -left-11 top-1/2 lg:-translate-y-1/2 transition-all duration-500 text-[var(--green-foreground)] group-hover/card:bg-[var(--green)] group-hover/card:text-white">
@@ -715,7 +715,7 @@
                     </div>
                     <!-- card end -->
                     <!-- card start -->
-                    <div class="relative rounded-[10px] bg-white border-2 border-[#F2F2F2] lg:p-10 p-4 transition-all duration-500 hover:shadow-3xl hover:border-transparent group/card wow animate__animated animate__fadeInUp"
+                    <div class="relative rounded-[10px] bg-white border-2 border-[#F2F2F2] lg:p-10 p-4 transition-all duration-500 hover:shadow-2xl hover:border-transparent group/card wow animate__animated animate__fadeInUp"
                         data-wow-delay=".6s">
                         <div
                             class="md:max-w-[88px] max-w-[70px] w-full max-h-[88px] flex justify-center items-center rounded-[10px] border border-[#F2F2F2] bg-white sm:p-[14px] p-2.5 static lg:absolute -left-11 top-1/2 lg:-translate-y-1/2 transition-all duration-500 text-[var(--green-foreground)] group-hover/card:bg-[var(--green)] group-hover/card:text-white">
@@ -1182,7 +1182,7 @@
                                     <!-- card start -->
                                     <div class="swiper-slide">
                                         <div
-                                            class="service-card rounded-[10px] px-7.5 py-9 bg-transparent hover:bg-white transition-all duration-500 hover:shadow-3xl m-2.5 group/card">
+                                            class="service-card rounded-[10px] px-7.5 py-9 bg-transparent hover:bg-white transition-all duration-500 hover:shadow-2xl m-2.5 group/card">
                                             <i class="icon-mat text-[65px] text-[var(--green-foreground)]"></i>
                                             <h4 class="lg:max-w-[176px] mt-5">
                                                 <a href="service-details.html"
@@ -1210,7 +1210,7 @@
                                     <!-- card start -->
                                     <div class="swiper-slide">
                                         <div
-                                            class="service-card rounded-[10px] px-7.5 py-9 bg-transparent hover:bg-white transition-all duration-500 hover:shadow-3xl m-2.5 group/card">
+                                            class="service-card rounded-[10px] px-7.5 py-9 bg-transparent hover:bg-white transition-all duration-500 hover:shadow-2xl m-2.5 group/card">
                                             <i class="icon-baby-body text-[65px] text-[var(--green-foreground)]"></i>
                                             <h4 class="lg:max-w-[176px] mt-5">
                                                 <a href="service-details.html"
@@ -1238,7 +1238,7 @@
                                     <!-- card start -->
                                     <div class="swiper-slide">
                                         <div
-                                            class="service-card rounded-[10px] px-7.5 py-9 bg-transparent hover:bg-white transition-all duration-500 hover:shadow-3xl m-2.5 group/card">
+                                            class="service-card rounded-[10px] px-7.5 py-9 bg-transparent hover:bg-white transition-all duration-500 hover:shadow-2xl m-2.5 group/card">
                                             <i class="icon-teddy-bear text-[65px] text-[var(--green-foreground)]"></i>
                                             <h4 class="lg:max-w-[176px] mt-5">
                                                 <a href="service-details.html"
@@ -1266,7 +1266,7 @@
                                     <!-- card start -->
                                     <div class="swiper-slide">
                                         <div
-                                            class="service-card rounded-[10px] px-7.5 py-9 bg-transparent hover:bg-white transition-all duration-500 hover:shadow-3xl m-2.5 group/card">
+                                            class="service-card rounded-[10px] px-7.5 py-9 bg-transparent hover:bg-white transition-all duration-500 hover:shadow-2xl m-2.5 group/card">
                                             <i class="icon-mat text-[65px] text-[var(--green-foreground)]"></i>
                                             <h4 class="lg:max-w-[176px] mt-5">
                                                 <a href="service-details.html"
@@ -1907,12 +1907,14 @@
             <div class="container mx-auto px-5 py-5">
                 <div class="flex lg:flex-row flex-col lg:items-center justify-between gap-7.5">
                     <div class="max-w-[598px] w-full order-1 lg:order-0 animate-left-right">
-                        <div class="bg-[url('/assets/img/ascent-tailwind/egg-shap.png')] bg-no-repeat bg-bottom bg-contain">
+                        <div
+                            class="bg-[url('/assets/img/ascent-tailwind/egg-shap.png')] bg-no-repeat bg-bottom bg-contain">
                             <img src="/assets/img/ascent-tailwind/student.png" alt="student-img" class="mx-auto">
                         </div>
                     </div>
                     <div class="lg:max-w-[530px] order-0 lg:order-1">
-                        <p class="font-bubblegum-sans text-[19px] text-black wow animate__animated animate__fadeInUp">Get Connected</p>
+                        <p class="font-bubblegum-sans text-[19px] text-black wow animate__animated animate__fadeInUp">
+                            Get Connected</p>
                         <h2 class="font-bold lg:text-[32px] md:text-[28px] text-2xl lg:leading-[130%] md:leading-[120%] leading-[110%] wow animate__animated animate__fadeInUp"
                             data-wow-delay=".3s">Education That Sparks Imaginat Nurturing Curiosity Inspire</h2>
                         <div class="relative lg:mt-10 mt-5">
@@ -1929,7 +1931,137 @@
             </div>
         </div>
     </section>
-    <footer></footer>
+    <footer class="pt-[70px] relative">
+        <div class="container mx-auto px-5 py-5">
+            <div class="grid lg:grid-cols-[370px_auto_auto] sm:grid-cols-2 grid-cols-1 justify-between gap-7.5">
+                <!-- compnay info start -->
+                <div class="wow animate__animated animate__fadeInUp" data-wow-delay=".3s">
+                    <a href="" class="flex items-center gap-1">
+                        <img src="/assets/img/ascent-tailwind/logo.png" alt="img">
+                        <span class="font-bold text-3xl ">Ascent</span>
+                    </a>
+                    <p class="pt-4">Yes, there are many notable ma corporate the a od businesses Informati worldwide</p>
+                    <ul class="flex items-center gap-5 pt-10">
+                        <li>
+                            <a href=""
+                                class="rounded-md w-9 h-9 flex items-center justify-center bg-[var(--warm)] hover:text-white hover:bg-[var(--green)] transition-all duration-500">
+                                <i class="fa-brands fa-facebook-f"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href=""
+                                class="rounded-md w-9 h-9 flex items-center justify-center bg-[var(--warm)] hover:text-white hover:bg-[var(--green)] transition-all duration-500">
+                                <i class="fa-brands fa-x-twitter"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href=""
+                                class="rounded-md w-9 h-9 flex items-center justify-center bg-[var(--warm)] hover:text-white hover:bg-[var(--green)] transition-all duration-500">
+                                <i class="fa-brands fa-linkedin"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href=""
+                                class="rounded-md w-9 h-9 flex items-center justify-center bg-[var(--warm)] hover:text-white hover:bg-[var(--green)] transition-all duration-500">
+                                <i class="fa-brands fa-pinterest-p"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- compnay info end -->
+                <!-- pages link start -->
+                <div class="wow animate__animated animate__fadeInUp" data-wow-delay=".5s">
+                    <h3 class="text-2xl font-semibold">Pages</h3>
+                    <ul class="flex flex-col gap-[15px] pt-5">
+                        <li>
+                            <a href=""
+                                class="text-[#686868] transition-all duration-500 hover:ml-1 hover:text-[var(--primary-foreground)]">About
+                                Us</a>
+                        </li>
+                        <li>
+                            <a href=""
+                                class="text-[#686868] transition-all duration-500 hover:ml-1 hover:text-[var(--primary-foreground)]">Latest
+                                Service</a>
+                        </li>
+                        <li>
+                            <a href=""
+                                class="text-[#686868] transition-all duration-500 hover:ml-1 hover:text-[var(--primary-foreground)]">Latest
+                                Blog And News</a>
+                        </li>
+                        <li>
+                            <a href=""
+                                class="text-[#686868] transition-all duration-500 hover:ml-1 hover:text-[var(--primary-foreground)]">FAQ</a>
+                        </li>
+                        <li>
+                            <a href=""
+                                class="text-[#686868] transition-all duration-500 hover:ml-1 hover:text-[var(--primary-foreground)]">Our
+                                Creative Team Member</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- pages link end -->
+                <!-- contact link start -->
+                <div class=" wow animate__animated animate__fadeInUp" data-wow-delay=".5s">
+                    <h3 class="text-2xl font-semibold">Contact</h3>
+                    <ul class="flex flex-col gap-[15px] pt-5">
+                        <li>
+                            <p class="text-[#686868] flex items-center gap-4">
+                                <span
+                                    class="w-11 h-11 rounded-full border border-gray-200 flex justify-center items-center text-[var(--green-foreground)]">
+                                    <i class="fa-solid fa-location-dot"></i>
+                                </span>
+                                <span class="max-w-[168px]">1179 KFC Road, Lisbon, Portugal</span>
+                            </p>
+                        </li>
+                        <li>
+                            <p class="text-[#686868] flex items-center gap-4">
+                                <span
+                                    class="w-11 h-11 rounded-full border border-gray-200 flex justify-center items-center text-[var(--green-foreground)]">
+                                    <i class="fa-solid fa-envelope"></i>
+                                </span>
+                                <a href="">Sakib23@gmail.com</a>
+                            </p>
+                        </li>
+                        <li>
+                            <p class="text-[#686868] flex items-center gap-4">
+                                <span
+                                    class="w-11 h-11 rounded-full border border-gray-200 flex justify-center items-center text-[var(--green-foreground)]">
+                                    <i class="fa-solid fa-phone"></i>
+                                </span>
+                                <a href="">012547892354</a>
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+                <!-- contact link end -->
+            </div>
+            <div class="pt-[75px] overflow-x-hidden">
+                <div
+                    class="flex lg:flex-row flex-col justify-between lg:items-center pt-7.5 pb-8 border-t border-t-white border-opacity-20">
+                    <p class="wow animate__animated animate__fadeInLeft" data-wow-delay=".3s">
+                        © <a href="">Yoursitename</a>
+                        2024 | All Rights Reserved
+                    </p>
+                    <ul class="flex items-center gap-7.5 wow animate__animated animate__fadeInRight"
+                        data-wow-delay=".3s">
+                        <li>
+                            <a href="">Trams & Condition</a>
+                        </li>
+                        <li>
+                            <a href="">Privacy Policy</a>
+                        </li>
+                        <li>
+                            <a href="">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div id="scroll-up"
+            class="absolute bottom-20 xl:left-[90%] left-1/2 -translate-x-1/2 w-12.5 h-12.5 rounded-full bg-[var(--primary)] text-white flex justify-center items-center border-[3px] border-white cursor-pointer">
+            <i class="fa-solid fa-arrow-up"></i>
+        </div>
+    </footer>
 
 
 
@@ -1950,6 +2082,12 @@
     <script>
         new WOW().init();
     </script>
+    <script>
+        document.getElementById('scroll-up').addEventListener('click', () => {
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+        });
+    </script>
+
     <!-- <script>
         const tabs = document.querySelectorAll('.target-tab');
         const contents = document.querySelectorAll('.tab-content');
