edit section letter

--- a/src/index.html
+++ b/src/index.html
@@ -1903,9 +1903,9 @@
         </div>
     </section>
     <section class="letter bg-[linear-gradient(180deg,_rgba(238,255,200,0.00)_0%,_#E9FFB6_100%)] overflow-x-hidden">
-        <div class="bg-bottom bg-no-repeat bg-contain bg-newsletter-banner">
-            <div class="container mx-auto px-5 py-5">
-                <div class="flex lg:flex-row flex-col lg:items-center justify-between gap-7.5">
+        <div class="bg-bottom bg-no-repeat bg-contain bg-[url('/assets/img/ascent-tailwind/bg-img.png')]">
+            <div class="container mx-auto px-5">
+                <div class="flex lg:flex-row flex-col lg:items-center justify-between gap-5">
                     <div class="max-w-[598px] w-full order-1 lg:order-0 animate-left-right">
                         <div
                             class="bg-[url('/assets/img/ascent-tailwind/egg-shap.png')] bg-no-repeat bg-bottom bg-contain">
